feat(4.5): initial monadic assertion implementation
implement equals for value equality
implement is for reference equality
implement fail for assertions that always fail
implement pass for assertions that always pass (of/just equivalent) applicative
implement chain, map, and ap combinators to implement monadic interface

--- a/package.json
+++ b/package.json
@@ -58,5 +58,9 @@
     "tslint": "^4.4.2",
     "typescript": "^2.1.6",
     "validate-commit-msg": "^2.11.1"
+  },
+  "dependencies": {
+    "@typed/curry": "^1.0.1",
+    "typed-colors": "^1.0.0"
   }
 }
